[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
PyNaCl = "^1.5.0"
Flask = "^2.2.1"
"discord.py-self" = {git = "https://github.com/dolfies/discord.py-self"}
discord = "^2.0.0"
pyunit-time = "^2021.2.2"
colorama = "^0.4.6"
requests = "^2.28.1"
bs4 = "^0.0.1"
python-dotenv = "^1.0.0"
orjson = "^3.8.8"
xds-protos = "^0.0.11"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"